ChangeLog for ARQ
=================
(the list covers new features and refinements.  See ASF JIRA for details of bugs fixed) 

==== ARQ 2.9.1

+ Changes for BINDINGS (SPARQL 1.1) - align with SPARQL-WG
  Now called VALUES : slight synatx changes.
  VALUES can be inline data as part of a query pattern.  
+ Comprehensive support for date/time/durations operations (JENA-235)
+ Property path syntax revised to align with current SPARQL
  No {...} forms in SPARQL query engine (available in ARQ language)
+ Property path semantics revised to align with current SPARQL
  *, + and ? are connectivity/non-counting
+ New property path evaluation engine framework.
+ Bug fix: DISTINCT might not be distinct (JENA-211)
+ QueryEngineHttp has configuration options (JENA-210)
+ Add function "StrUUID" which returns a UUID string (c.f. "UUID()" for a UUID as a URI of form <urn:uuid:....>)
  Also available as afn:struuid() and afn:uuid() for strict syntax. 
+ Add UpdateExecutionFactory.createRemote(...) for remote execution of SPARQL Update (JENA-197) 
+ Allow users to specify query parameters in SERVICE
  Allow the context to include a set of parameters add to SERVICE requests  
  (JENA-195)
+ SPARQL 1.1: Complete scope tracking of variables (JENA-142)
+ Faster writing of XML and JSON results formats (JENA-178)
+ Support for SERVICE with additional parameters (JENA-195)  

==== ARQ 2.8.9 / 2.9.0
** Java 6 is now required for running ARQ.

+ SPARQL 1.1: Provides \-escapes for characters ~.-!$&'()*+,;=:/?#@% 
              in local part of prefix names 
+ SPARQl 1.1: Allow %xx in the local part of prefix names
+ SPARQL 1.1 / RDF 1.1 : DATATYPE(literal-with-lang) is now rdf:langString, not an error.
+ DatasetFactory: preferred methods for an in-memory dataset are:
     create() -- will automatically add in-memory named graphs  
     createFixed() -- needs explicitly added extra graph  
+ BUG FIX: Mis-execution of GRAPH ?g { .. } where ?g used inside { .. } (JENA-154)